# Meshtastic-Solar

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  SSH-GPG-SETTINGS.md  platformio.ini
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: COMPILATION_GUIDE.md  MESHTASTIC_INTEGRATION.md
examples/: TESTING.md
include/: config.h  display.h  hardware.h  meshtastic_handler.h  messaging.h  timekeeper.h  webserver.h  whitelist.h
src/: display.cpp  hardware.cpp  main.cpp  meshtastic_handler.cpp  messaging.cpp  timekeeper.cpp  webserver.cpp  whitelist.cpp
